# goit-pythonweb-hw-012

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  seed.py
app/: config.py  main.py  models.py  repository.py  service.py
app/api/: auth.py  contacts.py  users.py
app/db/: models.py
app/repository/: contacts.py  users.py
app/schemas/: users.py
app/services/: auth.py  cache.py  contacts.py  email.py  users.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1320da67a4ee_initial_tables.py  71a0b56ca107_add_role_to_users.py
tests/: conftest.py  test_auth_integration.py  test_auth_unit.py  test_contacts_integration.py  test_contacts_repository.py  test_contacts_unit.py  test_users_unit.py
