[project]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Yelyzaveta Sheremet",email = "elizabethsheremet@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
